2101020318 front - APOD function Done

--- a/frontend/assets/style/tailwind.css
+++ b/frontend/assets/style/tailwind.css
@@ -1,3 +1,11 @@
+
+/* Third Party CSS */
+@import url("https://fonts.googleapis.com/css2?family=Neuton&display=swap");
+
+/* Custom CSS */
+@import url("./loader.css");
+
+/* tailwindCSS */
 @tailwind base;
 
 @tailwind components;
