--- a/frontend/assets/style/tailwind.css
+++ b/frontend/assets/style/tailwind.css
@@ -1,4 +1,3 @@
-
 /* Third Party CSS */
 @import url("https://fonts.googleapis.com/css2?family=Neuton&display=swap");
 
@@ -11,3 +10,18 @@
 @tailwind components;
 
 @tailwind utilities;
+
+body {
+  height: 100%;
+  width: 100%;
+}
+
+html {
+  height: 100%;
+  width: 100%;
+}
+
+#__next {
+  height: 100%;
+  width: 100%;
+}
